<resources>
    <string name="app_name">FoodUIApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="my_food_app_ui">My Food App UI</string>
    <string name="hello_explore_your_dream_food">Hello explore your dream food</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="daily_meal">Daily meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My cart</string>
    <string name="gmail">user@gmail.com</string>
    <string name="view_more">View more</string>
    <string name="your_favourite_and_testy_food_is_here">Your favourite and testy food is here!</string>
    <string name="_10_weekend_delicious_dinner_recipes">10 weekend delicious\nDinner recipes</string>
    <string name="description">Description</string>
</resources>